# my-rl-lib

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: getting-started.md  index.md
docs/api/: environments.md  index.md  learning-off-policy.md  learning-on-policy.md  metrics.md  policies.md  values.md
docs/examples/: index.md  metrics-tracking.md  q-learning-windy-gridworld.md  sarsa-mlflow.md
examples/: metrics_example.py  q_learning_windy_gridworld_mlflow.py  sarsa_mlflow_example.py
src/my_rl_lib/: __init__.py  types.py
src/my_rl_lib/environments/: __init__.py  abstract.py  windy_grid_world.py
src/my_rl_lib/learning/: n_step_utils.py  result.py  steps_store.py
src/my_rl_lib/metrics/: __init__.py  collector.py  context_key.py  metric_type.py  settings.py
src/my_rl_lib/policies/: abstract.py  epsilon_greedy.py  greedy.py  importance_sampling.py
src/my_rl_lib/values/: __init__.py  abstract.py  action_state.py  initializer.py  state.py
tests/: conftest.py
tests/environments/: test_windy_grid_world.py
tests/learning/: test_double_q_learning.py  test_expected_sarsa.py  test_n_step_sarsa.py  test_n_step_sarsa_off_policy.py  test_n_step_utils.py  test_q_learning.py  test_sarsa.py  test_steps_store.py
tests/metrics/: test_backends.py  test_collector.py  test_handlers.py
tests/policies/: test_epsilon_greedy.py  test_greedy.py  test_importance_sampling.py
tests/values/: test_action_state_values.py  test_initializer.py
(+17 files in other folders)
